--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
-    <header>
-
+    <header class="navbar">
+        <nav>
+            <div class="navbarfirst">
+                <h1 class="name">LOGO</h1>
+                <button class="btn">Sing Up</button>
+            </div>
+            <div class="titleheading">
+                <h1 class="title">Cool Dark UI Template for Webflow Agencies!</h1>
+                <button class="btn second-btn">Stay Focused</button>
+            </div>
+        </nav>
 
     </header>
 
