first section added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <div class="navbarfirst">
                 <h1 class="name">LOGO</h1>
-                <button class="btn">Sing Up</button>
+                <button class="btn first-btn">Sing Up</button>
             </div>
             <div class="titleheading">
                 <h1 class="title">Cool Dark UI Template for Webflow Agencies!</h1>
@@ -22,6 +22,15 @@
     </header>
 
     <main>
+        <section class="action">
+            <div class="acton-title">
+                <h1 class="main-title">See It in Action</h1>
+                <p class="discription-title">Explore the live preview and imagine your brand in this bold new look</p>
+                <button class="btn third-btn">Lunch Live Preview</button>
+            </div>
+            <img class="action-image" src="Assets/wc-mini.png" alt="">
+
+        </section>
 
     </main>
 
