--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Styles/style.css">
 </head>
-<body class="raleway-normal">
+<body class="raleway-normal main-bg">
     <header class="navbar">
         <nav>
             <div class="navbarfirst">
@@ -58,7 +58,51 @@
             </div>
         </section>
         <!-- Challange section -->
-        <section>
+        <section class="challenge-section">
+            <div>
+                <h2>What our users say</h2>
+                <div class="card-container">
+                    <div class="card" >
+                        <div class="img-icon">
+                            <img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt="">
+                        </div>
+                        <h3>Loved by Designers</h3>
+                        <p>This template instantly leveled up our <br>presence,"-Studio Vertex</p>
+                        <div class="user-pic">
+                            <img src="Assets/avatar.png" alt="">
+                            <div>
+                                <p>Alexadra Nikov <br>12-03-2025</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" >
+                        <div class="img-icon">
+                            <img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt="">
+                        </div>
+                        <h3>Loved by Designers</h3>
+                        <p>This template instantly leveled up our <br>presence,"-Studio Vertex</p>
+                        <div class="user-pic">
+                            <img src="Assets/avatar.png" alt="">
+                            <div>
+                                <p>Alexadra Nikov <br>12-03-2025</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" >
+                        <div class="img-icon">
+                            <img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt=""><img src="Assets/icon-star.png" alt="">
+                        </div>
+                        <h3>Loved by Designers</h3>
+                        <p>This template instantly leveled up our <br>presence,"-Studio Vertex</p>
+                        <div class="user-pic">
+                            <img src="Assets/avatar.png" alt="">
+                            <div>
+                                <p>Alexadra Nikov <br>12-03-2025</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+              </div>
 
         </section>
         <!-- Third Section -->
